plugin dev files

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "cosmincristea/modula-lite",
+    "name": "wpchill/modula-final-tiles-migrator",
     "authors": [
         {
-            "name": "cosmincristea",
-            "email": "cristea.cosmin87@gmail.com"
+            "name": "WPChill",
+            "email": "heyy@wpchill.com"
         }
     ],
     "require": {},
